# iot

./: Cargo.toml  README.md
src/: input.rs  lib.rs  main.rs  model.rs  settings.rs
src/api/: mod.rs  translator.rs
src/ui/: gui.rs  mod.rs  tui.rs
