[package]
name = "oit"
description = " Omnipresent Instant Translator"
authors = ["Michel Novus"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
arboard = "3.4.1"
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.14.1", features = ["toml"] }
directories = "5.0.1"
eframe = {version = "0.29.1", optional = true}
getset = "0.1.3"
isolang = { version = "2.4.0", features = ["serde"] }
minreq = {version = "2.12.0", features = [
    "https", "json-using-serde", "punycode", "urlencoding"
]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"

[features]
# default = ["egui"]
egui = ["dep:eframe"]
